feat(ui): EE-3540 tech review update

--- a/app/portainer/components/datatables/access-tokens-datatable/access-tokens-datatable.html
+++ b/app/portainer/components/datatables/access-tokens-datatable/access-tokens-datatable.html
@@ -45,7 +45,7 @@
                     <label for="select_all"></label>
                   </span>
                   <table-column-header
-                    col-title="'description'"
+                    col-title="'Description'"
                     can-sort="true"
                     is-sorted="$ctrl.state.orderBy === 'description'"
                     is-sorted-desc="$ctrl.state.orderBy === 'description' && $ctrl.state.reverseOrder"
@@ -55,7 +55,7 @@
               </th>
               <th>
                 <table-column-header
-                  col-title="'prefix'"
+                  col-title="'Prefix'"
                   can-sort="true"
                   is-sorted="$ctrl.state.orderBy === 'prefix'"
                   is-sorted-desc="$ctrl.state.orderBy === 'prefix' && $ctrl.state.reverseOrder"
@@ -64,7 +64,7 @@
               </th>
               <th>
                 <table-column-header
-                  col-title="'dateCreated'"
+                  col-title="'Created'"
                   can-sort="true"
                   is-sorted="$ctrl.state.orderBy === 'dateCreated'"
                   is-sorted-desc="$ctrl.state.orderBy === 'dateCreated' && $ctrl.state.reverseOrder"
@@ -73,7 +73,7 @@
               </th>
               <th>
                 <table-column-header
-                  col-title="'lastUsed'"
+                  col-title="'Last Used'"
                   can-sort="true"
                   is-sorted="$ctrl.state.orderBy === 'lastUsed'"
                   is-sorted-desc="$ctrl.state.orderBy === 'lastUsed' && $ctrl.state.reverseOrder"
