--- a/app/portainer/components/BEFeatureIndicator/BEFeatureIndicator.html
+++ b/app/portainer/components/BEFeatureIndicator/BEFeatureIndicator.html
@@ -1,5 +1,5 @@
-<a class="be-indicator vertical-center" href="{{ $ctrl.url }}" target="_blank" rel="noopener" ng-if="$ctrl.limitedToBE">
+<a class="be-indicator" href="{{ $ctrl.url }}" target="_blank" rel="noopener" ng-if="$ctrl.limitedToBE">
   <ng-transclude></ng-transclude>
-  <pr-icon icon="'briefcase'" feather="true" class="icon-primary"></pr-icon>
+  <i class="be-indicator-icon fas fa-briefcase space-right"></i>
   <span class="be-indicator-label">Business Edition Feature</span>
 </a>
