--- a/app/kubernetes/views/volumes/components/volumes-storages-datatable/template.html
+++ b/app/kubernetes/views/volumes/components/volumes-storages-datatable/template.html
@@ -1,138 +1,148 @@
 <div class="datatable">
-  <rd-widget>
-    <rd-widget-body classes="no-padding">
-      <div class="toolBar">
-        <div class="toolBarTitle"> <i class="fa" ng-class="$ctrl.titleIcon" aria-hidden="true" style="margin-right: 2px"></i> {{ $ctrl.titleText }} </div>
-        <div class="settings">
-          <span class="setting" ng-class="{ 'setting-active': $ctrl.settings.open }" uib-dropdown dropdown-append-to-body auto-close="disabled" is-open="$ctrl.settings.open">
-            <span uib-dropdown-toggle><i class="fa fa-cog" aria-hidden="true"></i> Table settings</span>
-            <div class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-              <div class="tableMenu">
-                <div class="menuHeader"> Table settings </div>
-                <div class="menuContent">
-                  <div>
-                    <div class="md-checkbox">
-                      <input id="setting_auto_refresh" type="checkbox" ng-model="$ctrl.settings.repeater.autoRefresh" ng-change="$ctrl.onSettingsRepeaterChange()" />
-                      <label for="setting_auto_refresh">Auto refresh</label>
-                    </div>
-                    <div ng-if="$ctrl.settings.repeater.autoRefresh">
-                      <label for="settings_refresh_rate"> Refresh rate </label>
-                      <select id="settings_refresh_rate" ng-model="$ctrl.settings.repeater.refreshRate" ng-change="$ctrl.onSettingsRepeaterChange()" class="small-select">
-                        <option value="10">10s</option>
-                        <option value="30">30s</option>
-                        <option value="60">1min</option>
-                        <option value="120">2min</option>
-                        <option value="300">5min</option>
-                      </select>
-                      <span>
-                        <i id="refreshRateChange" class="fa fa-check green-icon" aria-hidden="true" style="margin-top: 7px; display: none"></i>
-                      </span>
-                    </div>
-                  </div>
-                </div>
-                <div>
-                  <a type="button" class="btn btn-default btn-sm" ng-click="$ctrl.settings.open = false;">Close</a>
-                </div>
-              </div>
-            </div>
-          </span>
-        </div>
+  <!-- toolbar header actions and settings -->
+  <div class="toolBar !flex-col gap-1">
+    <div class="toolBar vertical-center !gap-x-5 !gap-y-1 flex-wrap !p-0 w-full">
+      <div class="toolBarTitle vertical-center">
+        <pr-icon icon="'database'" feather="true" class-name="'icon-nested-blue'" mode="'primary'"></pr-icon>
+        Storage
       </div>
-      <div class="searchBar">
-        <i class="fa fa-search searchIcon" aria-hidden="true"></i>
+      <div class="searchBar vertical-center">
+        <pr-icon icon="'search'" feather="true"></pr-icon>
         <input
           type="text"
           class="searchInput"
           ng-model="$ctrl.state.textFilter"
           ng-change="$ctrl.onTextFilterChange()"
-          placeholder="Search..."
+          placeholder="Search for storage..."
           auto-focus
           ng-model-options="{ debounce: 300 }"
         />
       </div>
-      <div class="table-responsive">
-        <table class="table table-hover nowrap-cells">
-          <thead>
-            <tr>
-              <th style="width: 20px">
-                <a ng-click="$ctrl.expandAll()" ng-if="$ctrl.hasExpandableItems()">
-                  <i ng-class="{ 'fas fa-angle-down': $ctrl.state.expandAll, 'fas fa-angle-right': !$ctrl.state.expandAll }" aria-hidden="true"></i>
-                </a>
-              </th>
-              <th style="width: 60%">
-                <a ng-click="$ctrl.changeOrderBy('Name')">
-                  Storage
-                  <i class="fa fa-sort-alpha-down" aria-hidden="true" ng-if="$ctrl.state.orderBy === 'Name' && !$ctrl.state.reverseOrder"></i>
-                  <i class="fa fa-sort-alpha-up" aria-hidden="true" ng-if="$ctrl.state.orderBy === 'Name' && $ctrl.state.reverseOrder"></i>
-                </a>
-              </th>
-              <th style="width: 38%">
-                <a ng-click="$ctrl.changeOrderBy('Size')">
-                  Usage
-                  <i class="fa fa-sort-numeric-down" aria-hidden="true" ng-if="$ctrl.state.orderBy === 'Size' && !$ctrl.state.reverseOrder"></i>
-                  <i class="fa fa-sort-numeric-up" aria-hidden="true" ng-if="$ctrl.state.orderBy === 'Size' && $ctrl.state.reverseOrder"></i>
-                </a>
-              </th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr
-              dir-paginate-start="item in ($ctrl.state.filteredDataSet = ($ctrl.dataset | filter:$ctrl.state.textFilter | orderBy:$ctrl.state.orderBy:$ctrl.state.reverseOrder | itemsPerPage: $ctrl.state.paginatedItemLimit: $ctrl.tableKey))"
-              ng-class="{ active: item.Checked, 'datatable-highlighted': item.Highlighted }"
-              ng-click="$ctrl.expandItem(item, !item.Expanded)"
-              pagination-id="$ctrl.tableKey"
-            >
-              <td>
-                <a ng-if="$ctrl.itemCanExpand(item)">
-                  <i ng-class="{ 'fas fa-angle-down': item.Expanded, 'fas fa-angle-right': !item.Expanded }" class="space-right" aria-hidden="true"></i>
-                </a>
-              </td>
-              <td>{{ item.Name }}</td>
-              <td>{{ item.Size }}</td>
-            </tr>
-            <tr
-              dir-paginate-end
-              ng-show="item.Expanded"
-              ng-repeat="vol in item.Volumes"
-              ng-class="{ 'datatable-highlighted': item.Highlighted, 'datatable-unhighlighted': !item.Highlighted }"
-            >
-              <td></td>
-              <td>
-                <a ui-sref="kubernetes.volumes.volume({ name: vol.PersistentVolumeClaim.Name, namespace: vol.PersistentVolumeClaim.Namespace })">
-                  {{ vol.PersistentVolumeClaim.Name }}
-                </a>
-              </td>
-              <td>
-                {{ vol.PersistentVolumeClaim.Storage }}
-              </td>
-            </tr>
-            <tr ng-if="!$ctrl.dataset">
-              <td colspan="5" class="text-center text-muted">Loading...</td>
-            </tr>
-            <tr ng-if="$ctrl.state.filteredDataSet.length === 0">
-              <td colspan="5" class="text-center text-muted">No storage available.</td>
-            </tr>
-          </tbody>
-        </table>
+      <div class="settings">
+        <span class="setting" ng-class="{ 'setting-active': $ctrl.settings.open }" uib-dropdown dropdown-append-to-body auto-close="disabled" is-open="$ctrl.settings.open">
+          <span uib-dropdown-toggle aria-label="Settings">
+            <pr-icon icon="'more-vertical'" feather="true" class-name="'!mr-0 !h-4'"></pr-icon>
+          </span>
+          <div class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
+            <div class="tableMenu">
+              <div class="menuHeader"> Table settings </div>
+              <div class="menuContent">
+                <div>
+                  <div class="md-checkbox">
+                    <input id="setting_auto_refresh" type="checkbox" ng-model="$ctrl.settings.repeater.autoRefresh" ng-change="$ctrl.onSettingsRepeaterChange()" />
+                    <label for="setting_auto_refresh">Auto refresh</label>
+                  </div>
+                  <div ng-if="$ctrl.settings.repeater.autoRefresh">
+                    <label for="settings_refresh_rate"> Refresh rate </label>
+                    <select id="settings_refresh_rate" ng-model="$ctrl.settings.repeater.refreshRate" ng-change="$ctrl.onSettingsRepeaterChange()" class="small-select">
+                      <option value="10">10s</option>
+                      <option value="30">30s</option>
+                      <option value="60">1min</option>
+                      <option value="120">2min</option>
+                      <option value="300">5min</option>
+                    </select>
+                    <span>
+                      <pr-icon id="refreshRateChange" icon="'check'" feather="true" mode="'success'" size="'sm'"></pr-icon>
+                    </span>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <a type="button" class="btn btn-default btn-sm" ng-click="$ctrl.settings.open = false;">Close</a>
+              </div>
+            </div>
+          </div>
+        </span>
       </div>
-      <div class="footer" ng-if="$ctrl.dataset">
-        <div class="infoBar" ng-if="$ctrl.state.selectedItemCount !== 0"> {{ $ctrl.state.selectedItemCount }} item(s) selected </div>
-        <div class="paginationControls">
-          <form class="form-inline">
-            <span class="limitSelector">
-              <span style="margin-right: 5px"> Items per page </span>
-              <select class="form-control" ng-model="$ctrl.state.paginatedItemLimit" ng-change="$ctrl.changePaginationLimit()" data-cy="component-paginationSelect">
-                <option value="0">All</option>
-                <option value="10">10</option>
-                <option value="25">25</option>
-                <option value="50">50</option>
-                <option value="100">100</option>
-              </select>
-            </span>
-            <dir-pagination-controls max-size="5" pagination-id="$ctrl.tableKey"></dir-pagination-controls>
-          </form>
-        </div>
-      </div>
-    </rd-widget-body>
-  </rd-widget>
+    </div>
+  </div>
+  <div class="table-responsive">
+    <table class="table table-hover nowrap-cells">
+      <thead>
+        <tr>
+          <th class="datatable-wide dropdown">
+            <div ng-if="$ctrl.hasExpandableItems()" class="cursor-pointer vertical-center" ng-click="$ctrl.expandAll()">
+              <pr-icon ng-if="$ctrl.state.expandAll" icon="'chevron-down'" feather="true"></pr-icon>
+              <pr-icon ng-if="!$ctrl.state.expandAll" icon="'chevron-right'" feather="true"></pr-icon>
+            </div>
+          </th>
+          <th style="width: 60%">
+            <table-column-header
+              col-title="'Storage'"
+              can-sort="true"
+              is-sorted="$ctrl.state.orderBy === 'Name'"
+              is-sorted-desc="$ctrl.state.orderBy === 'Name' && $ctrl.state.reverseOrder"
+              ng-click="$ctrl.changeOrderBy('Name')"
+            ></table-column-header>
+          </th>
+          <th style="width: 38%">
+            <table-column-header
+              col-title="'Usage'"
+              can-sort="true"
+              is-sorted="$ctrl.state.orderBy === 'Size'"
+              is-sorted-desc="$ctrl.state.orderBy === 'Size' && $ctrl.state.reverseOrder"
+              ng-click="$ctrl.changeOrderBy('Size')"
+            ></table-column-header>
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr
+          dir-paginate-start="item in ($ctrl.state.filteredDataSet = ($ctrl.dataset | filter:$ctrl.state.textFilter | orderBy:$ctrl.state.orderBy:$ctrl.state.reverseOrder | itemsPerPage: $ctrl.state.paginatedItemLimit: $ctrl.tableKey))"
+          ng-class="{ active: item.Checked, 'datatable-highlighted': item.Highlighted }"
+          ng-click="$ctrl.expandItem(item, !item.Expanded)"
+          pagination-id="$ctrl.tableKey"
+        >
+          <td>
+            <div ng-if="$ctrl.itemCanExpand(item)" class="vertical-center">
+              <pr-icon ng-if="item.Expanded" icon="'chevron-down'" feather="true"></pr-icon>
+              <pr-icon ng-if="!item.Expanded" icon="'chevron-right'" feather="true"></pr-icon>
+            </div>
+          </td>
+          <td>{{ item.Name }}</td>
+          <td>{{ item.Size }}</td>
+        </tr>
+        <tr
+          dir-paginate-end
+          ng-show="item.Expanded"
+          ng-repeat="vol in item.Volumes"
+          ng-class="{ 'datatable-highlighted': item.Highlighted, 'datatable-unhighlighted': !item.Highlighted }"
+        >
+          <td></td>
+          <td>
+            <a ui-sref="kubernetes.volumes.volume({ name: vol.PersistentVolumeClaim.Name, namespace: vol.PersistentVolumeClaim.Namespace })">
+              {{ vol.PersistentVolumeClaim.Name }}
+            </a>
+          </td>
+          <td>
+            {{ vol.PersistentVolumeClaim.Storage }}
+          </td>
+        </tr>
+        <tr ng-if="!$ctrl.dataset">
+          <td colspan="5" class="text-center text-muted">Loading...</td>
+        </tr>
+        <tr ng-if="$ctrl.state.filteredDataSet.length === 0">
+          <td colspan="5" class="text-center text-muted">No storage available.</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="footer pl-5" ng-if="$ctrl.dataset">
+    <div class="infoBar !ml-0" ng-if="$ctrl.state.selectedItemCount !== 0"> {{ $ctrl.state.selectedItemCount }} item(s) selected </div>
+    <div class="paginationControls">
+      <form class="form-inline">
+        <span class="limitSelector">
+          <span style="margin-right: 5px"> Items per page </span>
+          <select class="form-control" ng-model="$ctrl.state.paginatedItemLimit" ng-change="$ctrl.changePaginationLimit()" data-cy="component-paginationSelect">
+            <option value="0">All</option>
+            <option value="10">10</option>
+            <option value="25">25</option>
+            <option value="50">50</option>
+            <option value="100">100</option>
+          </select>
+        </span>
+        <dir-pagination-controls max-size="5" pagination-id="$ctrl.tableKey"></dir-pagination-controls>
+      </form>
+    </div>
+  </div>
 </div>
