--- a/app/kubernetes/views/volumes/components/volumes-storages-datatable/template.html
+++ b/app/kubernetes/views/volumes/components/volumes-storages-datatable/template.html
@@ -6,7 +6,7 @@
         <pr-icon icon="'database'" feather="true" class-name="'icon-nested-blue'" mode="'primary'"></pr-icon>
         Storage
       </div>
-      <div class="searchBar vertical-center">
+      <div class="searchBar vertical-center !mr-0">
         <pr-icon icon="'search'" feather="true"></pr-icon>
         <input
           type="text"
